--- a/dashboard-wired.html
+++ b/dashboard-wired.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>5週復盤陪跑班 - 打卡儀表板</title>
+    <title>5 週復盤陪跑班 - 打卡儀表板 </title>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@700;900&family=Caveat:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@700;900&family=Caveat:wght@700&display=swap"
+        rel="stylesheet">
 
-    <!-- Wired Elements -->
-    <script type="module" src="https://unpkg.com/wired-elements?module"></script>
+    <!-- Wired Elements (load only if not already registered) -->
+    <script type="module">
+        if (!customElements.get('wired-item')) {
+            import('https://unpkg.com/wired-elements?module').catch(err => console.error('Failed to load wired-elements:', err));
+        }
+    </script>
 
     <!-- Dashboard CSS -->
     <link rel="stylesheet" href="css/dashboard.css">
 </head>
+
 <body>
     <div class="container">
         <!-- 頂部標題 -->
         <div class="header">
-            <h1>🔥 5週復盤陪跑班</h1>
+            <h1> 🔥 5 週復盤陪跑班 </h1>
             <p>35 天養成習慣，我們一起見證彼此的成長！</p>
         </div>
 
         <!-- 刷新時間提示 -->
         <div class="refresh-notice">
-            <span class="refresh-icon">⏰</span>
+            <span class="refresh-icon"> ⏰ </span>
             <span class="refresh-text">
                 資料更新時間：每日
                 <strong>08:00</strong> /
@@ -32,27 +39,27 @@
                 <strong>23:00</strong>
             </span>
             <span class="refresh-divider">｜</span>
-            <span class="refresh-message">在這些美好時刻，回來見證彼此的成長吧！</span>
+            <span class="refresh-message"> 在這些美好時刻，回來見證彼此的成長吧！</span>
         </div>
 
         <!-- 區塊 1: 整體進度看板 -->
         <div class="stats-banner">
             <div class="stat-card">
-                <div class="stat-icon">👥</div>
-                <div class="stat-label">挑戰夥伴</div>
-                <div class="stat-value"><span id="totalStudents">-</span> 人</div>
-                <div class="stat-sub">一起挑戰中</div>
+                <div class="stat-icon"> 👥 </div>
+                <div class="stat-label"> 挑戰夥伴 </div>
+                <div class="stat-value"><span id="totalStudents">-</span> 人 </div>
+                <div class="stat-sub"> 一起挑戰中 </div>
             </div>
 
             <div class="stat-card stat-card-wide">
-                <div class="stat-icon">✅</div>
-                <div class="stat-label">今日打卡狀況</div>
+                <div class="stat-icon"> ✅ </div>
+                <div class="stat-label"> 今日打卡狀況 </div>
                 <div class="stat-checkin-info">
                     <div class="checkin-numbers">
                         <span class="checkin-count" id="todayCheckins">-</span>
                         <span class="checkin-separator">/</span>
                         <span class="checkin-total" id="todayCheckinsTotal">-</span>
-                        <span class="checkin-unit">人</span>
+                        <span class="checkin-unit"> 人 </span>
                         <span class="checkin-rate">(<span id="todayRateInline">-</span>%)</span>
                     </div>
                     <div class="progress-bar">
@@ -64,35 +71,50 @@
 
         <!-- 35 天挑戰進度 -->
         <div class="heatmap-container">
-            <h2>35 天挑戰進度</h2>
+            <h2>35 天挑戰進度 </h2>
 
             <!-- 進度資訊 -->
             <div class="challenge-progress-info">
                 <div class="challenge-days">
-                    <span class="current-day">第 <span id="challengeCurrentDay">-</span> 天</span>
-                    <span class="total-days">/ 35 天</span>
+                    <span class="current-day"> 第 <span id="challengeCurrentDay">-</span> 天 </span>
+                    <span class="total-days">/ 35 天 </span>
                 </div>
                 <div class="challenge-progress-bar">
                     <div class="challenge-progress-fill" id="challengeProgressFill" style="width: 0%"></div>
                     <!-- 里程碑標記 -->
-                    <div class="milestone" style="left: 20%;" data-day="7" title="7天萌芽 - 完成第一週的間歇式日記，開始培養習慣！">
-                        <span class="milestone-icon">🌱</span>
+                    <div class="milestone" style="left: 20%;" data-day="7" title="7 天萌芽 - 完成第一週的間歇式日記，開始培養習慣！">
+                        <div class="milestone-tooltip milestone-tooltip-achieved">🎉 太棒了！你已經堅持了一週！<br>習慣的種子已經開始發芽 🌱
+                        </div>
+                        <div class="milestone-tooltip milestone-tooltip-locked">❓ 繼續加油，解鎖更多驚喜！</div>
+                        <span class="milestone-icon"> 🌱 </span>
                         <span class="milestone-label">7</span>
                     </div>
-                    <div class="milestone" style="left: 40%;" data-day="14" title="14天成長 - 掌握了萃取法的基本技巧，開始能從經驗中提煉價值">
-                        <span class="milestone-icon">🌿</span>
+                    <div class="milestone" style="left: 40%;" data-day="14" title="14 天成長 - 掌握了萃取法的基本技巧，開始能從經驗中提煉價值 ">
+                        <div class="milestone-tooltip milestone-tooltip-achieved">💪 兩週了！你正在成長！<br>反思的力量已經在你身上展現 ✨</div>
+                        <div class="milestone-tooltip milestone-tooltip-locked">❓ 繼續加油，解鎖更多驚喜！</div>
+                        <span class="milestone-icon"> 🌿 </span>
                         <span class="milestone-label">14</span>
                     </div>
-                    <div class="milestone" style="left: 60%;" data-day="21" title="21天茁壯 - 習慣已經成型，反思能力顯著提升！">
-                        <span class="milestone-icon">🌳</span>
+                    <div class="milestone" style="left: 60%;" data-day="21" title="21 天茁壯 - 習慣已經成型，反思能力顯著提升！">
+                        <div class="milestone-tooltip milestone-tooltip-achieved">🌟 三週了，真的很不簡單！<br>你已經養成了一個終身受益的好習慣 🎯
+                        </div>
+                        <div class="milestone-tooltip milestone-tooltip-locked">❓ 繼續加油，解鎖更多驚喜！</div>
+                        <span class="milestone-icon"> 🌳 </span>
                         <span class="milestone-label">21</span>
                     </div>
-                    <div class="milestone" style="left: 80%;" data-day="28" title="28天突破 - 建立了屬於自己的複盤系統，持續精進中">
-                        <span class="milestone-icon">🏆</span>
+                    <div class="milestone" style="left: 80%;" data-day="28" title="28 天突破 - 建立了屬於自己的複盤系統，持續精進中 ">
+                        <div class="milestone-tooltip milestone-tooltip-achieved">🔥 四週了，你是真正的勇士！<br>持續的力量會帶你走得更遠 🚀
+                        </div>
+                        <div class="milestone-tooltip milestone-tooltip-locked">❓ 繼續加油，解鎖更多驚喜！</div>
+                        <span class="milestone-icon"> 🏆 </span>
                         <span class="milestone-label">28</span>
                     </div>
-                    <div class="milestone milestone-final" style="left: 100%;" data-day="35" title="35天完成 - 恭喜完成全程！你已經養成了終身受益的習慣">
-                        <span class="milestone-icon">⭐</span>
+                    <div class="milestone milestone-final" style="left: 100%;" data-day="35"
+                        title="35 天完成 - 恭喜完成全程！你已經養成了終身受益的習慣 ">
+                        <div class="milestone-tooltip milestone-tooltip-achieved">🎊 恭喜完成 35 天挑戰！<br>你做到了！這份堅持會改變你的人生 💎
+                        </div>
+                        <div class="milestone-tooltip milestone-tooltip-locked">❓ 堅持到底，見證蛻變時刻！</div>
+                        <span class="milestone-icon"> ⭐ </span>
                         <span class="milestone-label">35</span>
                     </div>
                 </div>
@@ -104,7 +126,7 @@
                 <!-- 熱力圖方格將由 JavaScript 動態生成 -->
             </div>
             <div class="heatmap-legend">
-                <span>打卡率：</span>
+                <span> 打卡率：</span>
                 <div class="heatmap-legend-item">
                     <div class="heatmap-legend-color level-0"></div>
                     <span>0-20%</span>
@@ -134,17 +156,17 @@
         <!-- 今日打卡動態 -->
         <div class="today-checkin-status">
             <h2>
-                <span>今日打卡動態</span>
-                <button class="refresh-button" onclick="refreshTodayStatus()">🔄 立即刷新</button>
+                <span> 今日打卡動態 </span>
+                <button class="refresh-button" onclick="refreshTodayStatus()"> 🔄 立即刷新 </button>
             </h2>
 
             <div class="checkin-stats-row">
                 <div class="checkin-stat-box checked">
-                    <div class="checkin-stat-label">✅ 已打卡</div>
+                    <div class="checkin-stat-label"> ✅ 已打卡 </div>
                     <div class="checkin-stat-value" id="todayCheckedCount">-</div>
                 </div>
                 <div class="checkin-stat-box unchecked">
-                    <div class="checkin-stat-label">⏸️ 未打卡</div>
+                    <div class="checkin-stat-label"> ⏸️ 未打卡 </div>
                     <div class="checkin-stat-value" id="todayUncheckedCount">-</div>
                 </div>
             </div>
@@ -152,17 +174,19 @@
             <div style="margin-bottom: 15px;">
                 <span class="toggle-section" onclick="toggleStudentList()">
                     <span id="toggleIcon">▼</span>
-                    <span style="margin-left: 8px;">查看學員列表</span>
+                    <span style="margin-left: 8px;"> 查看學員列表 </span>
                 </span>
             </div>
 
             <div id="studentAvatarsContainer" style="display: none;">
-                <h3 style="font-size: 20px; font-weight: 900; margin-bottom: 15px; color: #4CAF50; border-bottom: 2px solid #4CAF50; padding-bottom: 10px;">
+                <h3
+                    style="font-size: 20px; font-weight: 900; margin-bottom: 15px; color: #4CAF50; border-bottom: 2px solid #4CAF50; padding-bottom: 10px;">
                     ✅ 已打卡 (<span id="checkedListCount">0</span>)
                 </h3>
                 <div class="student-avatars" id="checkedStudents"></div>
 
-                <h3 style="font-size: 20px; font-weight: 900; margin: 25px 0 15px 0; color: #FF9800; border-bottom: 2px solid #FF9800; padding-bottom: 10px;">
+                <h3
+                    style="font-size: 20px; font-weight: 900; margin: 25px 0 15px 0; color: #FF9800; border-bottom: 2px solid #FF9800; padding-bottom: 10px;">
                     ⏸️ 未打卡 (<span id="uncheckedListCount">0</span>)
                 </h3>
                 <div class="student-avatars" id="uncheckedStudents"></div>
@@ -174,38 +198,37 @@
             <!-- 區塊 2: 連續打卡王 -->
             <div class="leaderboard">
                 <h2>
-                    <span class="section-title">連續打卡王</span>
-                    <a id="statsSheetLink"
-                       target="_blank"
-                       style="font-size: 15px; color: #FF6B35; text-decoration: none; font-weight: 700;">
+                    <span class="section-title"> 連續打卡王 </span>
+                    <a id="statsSheetLink" target="_blank"
+                        style="font-size: 15px; color: #FF6B35; text-decoration: none; font-weight: 700;">
                         📊 查看全部
                     </a>
                 </h2>
-                <div id="leaderboardList" class="loading">載入中</div>
+                <div id="leaderboardList" class="loading"> 載入中 </div>
             </div>
 
             <!-- 區塊 3: 每日亮點牆 -->
             <div class="highlights">
                 <h2>
-                    <span class="section-title">每日亮點牆<span style="font-size: 18px; color: #999; margin-left: 8px;">（今日）</span></span>
-                    <a id="highlightsSheetLink"
-                       target="_blank"
-                       style="font-size: 15px; color: #FF6B35; text-decoration: none; font-weight: 700;">
+                    <span class="section-title"> 每日亮點牆 <span
+                            style="font-size: 18px; color: #999; margin-left: 8px;">（今日）</span></span>
+                    <a id="highlightsSheetLink" target="_blank"
+                        style="font-size: 15px; color: #FF6B35; text-decoration: none; font-weight: 700;">
                         📝 歷史記錄
                     </a>
                 </h2>
-                <div id="highlightsList" class="loading">載入中</div>
+                <div id="highlightsList" class="loading"> 載入中 </div>
             </div>
         </div>
 
         <!-- 區塊 4: 個人打卡查詢 -->
         <div class="personal-lookup">
-            <h2>個人打卡查詢</h2>
+            <h2> 個人打卡查詢 </h2>
             <div class="lookup-controls">
                 <select id="studentSelect">
-                    <option value="">請選擇學員</option>
+                    <option value=""> 請選擇學員 </option>
                 </select>
-                <button onclick="lookupStudent()">查詢</button>
+                <button onclick="lookupStudent()"> 查詢 </button>
             </div>
             <div id="personalResult"></div>
         </div>
@@ -214,4 +237,5 @@
     <!-- Main Application Script -->
     <script type="module" src="js/main.js"></script>
 </body>
+
 </html>
