增打卡提醒

--- a/dashboard-wired.html
+++ b/dashboard-wired.html
@@ -40,6 +40,12 @@
             </span>
             <span class="refresh-divider">｜</span>
             <span class="refresh-message"> 在這些美好時刻，回來見證彼此的成長吧！</span>
+            <span class="refresh-divider">｜</span>
+            <div class="checkin-container">
+                <div class="speech-bubble">
+                    你今天打卡了嗎？還沒的話，<a href="https://forms.gle/AnUzSCAU6y9LkFVv6" target="_blank">在這裡打卡</a>
+                </div>
+            </div>
         </div>
 
         <!-- 區塊 1: 整體進度看板 -->
